# Thesis

./: Compile.sh  Out.txt  README.md
CppCode/: CartesianToSpherical.cpp  DataToJson.cpp  ExploreDirectory.h  FileManip.cpp  Utility.cpp  [IO]Pipeline.cpp
DataToJson/: CMakeLists.txt  DataToJson.cpp
Libraries/: FileManip.h  Pipeline.h  Utility.cpp  Utility.h
Main/: CMakeLists.txt  CartesianToSpherical.cpp  CartesianToSpherical.h  DataToJson.cpp  DataToJson.h  Displacement.cpp  Displacement.h  DivideData.cpp  DivideData.h  DivideFastSlow.cpp  DivideFastSlow.h  Histogram.cpp  Histogram.h  Main.cpp  MixData.cpp  MixData.h  RunningAverage.cpp  RunningAverage.h  TrackLength.h  Variations.cpp  Variations.h
PlotScripts/: AngularVariarions.py  CleanData.py  E2E4DisplacementFit.py  E2E4TrackLengthFit.py  OnePlot.py  PlotAngularVariarions.py  PlotCFurc_CostFunctions.py  PlotCFurc_DisplacementFit.py  PlotCFurc_GammaFit.py  PlotCFurc_MeanDisplacement.py  PlotCFurc_MeanVel.py  PlotCFurc_TrackLengthFit.py  PlotCFurc_VelModuleHisto.py  PlotMain.py  TwoPlots.py  VelModule.py
